# articulate

./: app.py  playground.py  pyproject.toml  seen.txt  words.csv
data/: actions.csv  nature.csv  objects.csv  people.csv  random.csv  spade.csv  world.csv
