[tool.poetry]
name = "articulate"
version = "0.1.0"
description = ""
authors = ["its-ohio <ohio.imevbore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
streamlit-js-eval = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
